--- a/EKS/helm/templates/cart-deployment.yaml
+++ b/EKS/helm/templates/cart-deployment.yaml
@@ -22,8 +22,8 @@ spec:
         image: {{ .Values.image.repo }}/rs-cart:{{ .Values.image.version }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         # agent networking access
-        env:
-          - name: INSTANA_AGENT_HOST
+        env:                              # this create a env variable INSTANA_AGENT_HOST = <node ip of host>
+          - name: INSTANA_AGENT_HOST    
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
@@ -31,12 +31,12 @@ spec:
         - containerPort: 8080
         resources:
           limits:
-            cpu: 200m
-            memory: 100Mi
+            cpu: 200m      #Limit: the container can use up to 0.2 CPU core, no more
+            memory: 100Mi   # Limit: the container can use up to 100 MiB of RAM, no more
           requests:
-            cpu: 100m
-            memory: 50Mi
-      {{- with .Values.cart.affinity }}
+            cpu: 100m      #Request: the container is guaranteed 0.1 CPU core
+            memory: 50Mi   #Request: the container is guaranteed 50 MiB of RAM
+      {{- with .Values.cart.affinity }}    
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
